apps/mne-doc-doc-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: mne-doc-doc-webapi
spec:
 parentRefs:
   - name: wac-hospital-gateway
     namespace: wac-hospital
   - name: wac-hospital-gateway  # Hack to make it work for common cluster
     namespace: wac-hospital-system
 rules:
   - matches:
       - path:
           type: PathPrefix
           value: /mne-api
     filters:
       - type: URLRewrite
         urlRewrite:
           path:
             type: ReplacePrefixMatch
             replacePrefixMatch: /api
     backendRefs:
       - group: ""
         kind: Service
         name: mne-doc-doc-webapi
         port: 80
   - matches:
        - path:
            type: PathPrefix
            value: /mne-openapi-ui
     backendRefs:
        - group: ""
          kind: Service
          name: mne-openapi-ui
          port: 80
   - matches:
        - path:
            type: Exact
            value: /mne-openapi
     filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /openapi
     backendRefs:
        - group: ""
          kind: Service
          name: mne-doc-doc-webapi
          port: 80
